--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.tensorflow.lite.examples.detection">
 
     <uses-sdk />
@@ -13,26 +14,24 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/tfe_od_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.ObjectDetection">
-        <meta-data
-            android:name="com.google.android.actions"
-            android:resource="@xml/radius" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".DetectorActivity"
             android:label="@string/tfe_od_app_name"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity android:name=".MainActivity_tensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,12 +39,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DetectMenuActivity" />
+        <activity android:name=".ImageActivity" />
+        <activity android:name=".DetectModeActivity" />
+        <activity android:name=".FindpwActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".PopupActivity" />
+        <activity android:name=".SigninActivity" />
 
-        <activity android:name=".DetectMenuActivity"/>
-        <activity android:name=".FindpwActivity"/>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".PopupActivity"/>
-        <activity android:name=".SigninActivity"/>
+        <provider
+            android:authorities="org.tensorflow.lite.examples.detection"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+
+        </provider>
     </application>
 
 </manifest>
